Fix tile overflow

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -22,6 +22,12 @@ $fa-font-path: "webfonts";
   src: url(fonts/Alfphabet-IV.ttf);
 }
 
+.container {
+  padding-left: $tile-spacing;
+  padding-right: $tile-spacing;
+  padding-top: $tile-spacing;
+}
+
 .navbar-brand {
   .navbar-item {
     font-family: alfphabet;
